html template button added

--- a/exam.spring/src/main/resources/templates/index.html
+++ b/exam.spring/src/main/resources/templates/index.html
@@ -24,6 +24,7 @@
         <input type="text"  id="plate" name="plate"/>
     </div>
 </form>
+<p><button type="submit" id="submit" class="btn btn-success" >Add Plate</button></p>
 <h6>Search by plate</h6>
     <div>
         <form  th:action="@{/search}" method="get">
